# very-temporary-project-showcase

.github/: README.md
games/Elektrika/: README.md  main.c
games/Fabulous Infinidrive of Good Old Felda/: README.md  cc.ts  index.html  tsconfig.json
games/Java Master the Legend of Segfault/: .gitignore  README.md
games/Peklo Upeklo/: MusicPlayer.tscn  README.md  default_bus_layout.tres  project.godot  vial.gd  vial.tscn
games/Settlement Builder/: README.md  Semestral work.sln
games/The Bold Bald Knight/: README.md  export_presets.cfg  header.png.import  project.godot
games/Vlkodlak/: README.md  compile_flags.txt
graphics/CUDA Rasterizer/: README.md  build.ps1  plot.py  stats.ps1
graphics/Flower OpenGL/: README.md  profojak.sln  profojak.vcxproj
graphics/Fluid Simulation/: .gitignore  Doxyfile  Makefile  README.md  config.json  fluid-win.sln  fluid-win.vcxproj  meson.build
graphics/Fluid Simulation/reports/: fluid.tex
graphics/Fluid Simulation/source/: cpu.cpp  fluid.cpp  fluid.hpp  functions.cuh  gpu.cu  main.cpp  particles.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
graphics/KD-tree/: README.md  kdtree.cpp  kdtree.h
graphics/Neural Network Visualization/: NN.py  README.md  app.js  index.html  model.keras  msgpack2json.py
graphics/Path Tracer/: README.md
graphics/Voxel Renderer/: .gitignore  README.md  VoxelRendererProject.sln
others/Risc-V/: .gitignore  Makefile  README.md  data.hex  instruction.hex  program.dump  riscv.v
others/Vector/: .clangd-format  .gitignore  .gitlab-ci.yml  Makefile  README.adoc  README.md  benchmark.txt  (+4 more)
(+606 files in other folders)
